--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,9 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Azure subscription 1(f62a9ff9-2aa6-487c-88c1-8f874ce9c4ce)'
+    appType: 'webAppLinux'
+    appName: 'etienne2024'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
