--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,12 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+    zipAfterPublish: true
+
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'Azure subscription 1(f62a9ff9-2aa6-487c-88c1-8f874ce9c4ce)'
